--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-mui-dropzone",
-  "version": "4.0.2",
-  "description": "A Material-UI file-upload dropzone",
+  "version": "4.0.4",
+  "description": "A Material-UI-v5 file-upload dropzone",
   "license": "MIT",
   "author": "Yuval",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Yuvaleros/material-ui-dropzone.git"
+    "url": "https://github.com/lifeeric/material-ui-dropzone"
   },
   "keywords": [
     "react",
@@ -75,7 +75,7 @@
     "babel-plugin-optimize-clsx": "^2.6.0",
     "babel-plugin-transform-dev-warning": "^0.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "eslint": "^6.8.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-react": "^7.19.0",
     "gh-pages": "^1.2.0",
