--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-mui-dropzone",
-  "version": "4.0.6",
+  "name": "react-dropzone-mui-skm",
+  "version": "4.0.7",
   "description": "A Material-UI-v5 file-upload dropzone",
   "license": "MIT",
-  "author": "Yuval",
+  "author": "Yuval, Suresh Kumar Mukhiya",
   "repository": {
     "type": "git",
     "url": "https://github.com/lifeeric/material-ui-dropzone"
@@ -25,7 +25,7 @@
     "dist"
   ],
   "engines": {
-    "node": ">=8",
+    "node": ">=14",
     "yarn": ">=1"
   },
   "scripts": {
@@ -40,53 +40,53 @@
     "docs:deploy": "gh-pages -d styleguide"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.4",
-    "clsx": "^1.0.2",
-    "react-dropzone": "^10.2.1"
+    "@babel/runtime": "^7.18.9",
+    "clsx": "^1.2.1",
+    "react-dropzone": "^14.2.2"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.2",
-    "@mui/styles": "^5.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
+    "@mui/styles": "^5.10.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
-    "@babel/plugin-transform-object-assign": "^7.10.1",
-    "@babel/plugin-transform-react-constant-elements": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
-    "@emotion/react": "^11.4.1",
+    "@babel/core": "^7.18.13",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/plugin-transform-react-constant-elements": "^7.18.12",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.2",
-    "@mui/styles": "^5.0.1",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-optimize-clsx": "^2.6.0",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
+    "@mui/styles": "^5.10.3",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "babel-eslint": "11.0.0-beta.2",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-dev-warning": "^0.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "^7.32.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-react": "^7.19.0",
-    "gh-pages": "^1.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-styleguidist": "^11.0.4",
-    "rollup": "^1.32.0",
-    "rollup-plugin-babel": "^4.4.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-react": "^7.31.6",
+    "gh-pages": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-styleguidist": "^12.0.0",
+    "rollup": "^2.79.0",
+    "rollup-plugin-babel": "5.0.0-alpha.2",
     "rollup-plugin-cpy": "^2.0.1",
-    "rollup-plugin-peer-deps-external": "2.2.2",
-    "rollup-plugin-size-snapshot": "^0.11.0",
-    "webpack": "^5.57.1"
+    "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-size-snapshot": "^0.12.0",
+    "webpack": "^5.74.0"
   }
 }
